--- a/OmarProyectoSymfony/templates/admin/dashboard.html.twig
+++ b/OmarProyectoSymfony/templates/admin/dashboard.html.twig
@@ -1,5 +1,5 @@
 {%extends '@EasyAdmin/page/content.html.twig' %}
     {% block content %}
-        <h1> Bienvenido al Panel de Administración de Cernada </h1>
-        <p>Usa el menu de la izquierda para gestionar Alumnos</p>
+        <h1> Bienvenido al Panel de Administración de SpotifyOmar </h1>
+        <p>Usa el menu de la izquierda para gestionar Spotify</p>
     {% endblock %}
