--- a/OmarProyectoSymfony/public/styles.css
+++ b/OmarProyectoSymfony/public/styles.css
@@ -66,74 +66,38 @@
 /* Div de registro */
 #registro {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    gap: 20px;  
-    padding: 20px;
-    background-color: #1DB954;  
-    border-radius: 10px;
-    width: 300px;
-    margin: 0 auto;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;
+    gap: 20px;
+    margin-top: 15px;
 }
 
-#registro:hover {
-    transform: scale(1.05); 
+.btn-link {
+    text-decoration: none;
 }
 
-#registro img {
-    width: 80px; 
-    height: auto;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-
-#registro a {
-    width: 100%;
-    text-decoration: none;  
-    display: block;  
-    padding: 5px;  
-}
-
-#registro input {
-    width: 100%;
-    padding: 18px;  
-    margin: 8px 0;
-    border: none;
-    border-radius: 8px;
+input[type="submit"] {
+    background: linear-gradient(135deg, #1DB954, #121212);
+    color: white;
     font-size: 18px;
-    background-color: #fff;
-    color: #333;
     font-weight: bold;
+    border: none;
+    padding: 12px 30px;
+    border-radius: 8px;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0px 0px 10px rgba(255, 0, 255, 0.6);
 }
 
-#registro input:hover {
-    background-color: #4CAF50;  
-    color: white;
-    transform: scale(1.05); 
+input[type="submit"]:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px rgba(0, 255, 255, 0.8);
 }
 
-#registroBtn {
-    background-color: #4CAF50;  
-    color: white;
-}
 
-#loginBtn {
-    background-color: #008CBA; 
-    color: white;
-}
 
-#registroBtn:hover {
-    background-color: #45a049;  
-}
 
-#loginBtn:hover {
-    background-color: #007BB5;  
-}
+
+
 
 
 /* Contenedor principal */
